# ChangeLog for sys-apps/gptfdisk
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gptfdisk/ChangeLog,v 1.56 2015/04/07 14:45:39 jlec Exp $

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> gptfdisk-0.8.10.ebuild:
  add arm64 support, tested on A53 board

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.10.ebuild:
  Stable for ppc64, wrt bug #510150

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> gptfdisk-0.8.10.ebuild:
  Do not inject configuration flags into build files.

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> gptfdisk-0.8.10.ebuild:
  ia64/sparc stable wrt #510150

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> gptfdisk-0.8.10.ebuild:
  Stable on alpha, bug #510150

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.10.ebuild:
  Stable for ppc, wrt bug #510150

  16 Jun 2014; Chema Alonso <nimiux@gentoo.org> gptfdisk-0.8.10.ebuild:
  Stable for amd64 wrt bug #510150

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> gptfdisk-0.8.10.ebuild:
  x86 stable wrt bug #510150

  25 May 2014; Markus Meier <maekke@gentoo.org> gptfdisk-0.8.10.ebuild:
  arm stable, bug #510150

*gptfdisk-0.8.10 (12 Apr 2014)

  12 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> -gptfdisk-0.8.4.ebuild,
  -gptfdisk-0.8.5.ebuild, -gptfdisk-0.8.6.ebuild, +gptfdisk-0.8.10.ebuild,
  metadata.xml:
  Version bump. Removed old. Added myself as maintainer.

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.8.ebuild:
  Stable for alpha, wrt bug #496530

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.8.ebuild:
  Stable for ia64, wrt bug #496530

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.8.ebuild:
  Stable for ppc64, wrt bug #496530

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.8.ebuild:
  Stable for sparc, wrt bug #496530

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> gptfdisk-0.8.8.ebuild:
  Stable for ppc, wrt bug #496530
