@@ -1,0 +1,13 @@
+DEFINED_PHASES=install prepare
+DEPEND=!static? ( dev-libs/popt ncurses? ( >=sys-libs/ncurses-5.7-r7 ) kernel_linux? ( sys-apps/util-linux ) ) static? ( dev-libs/popt[static-libs(+)] ncurses? ( >=sys-libs/ncurses-5.7-r7[static-libs(+)] ) kernel_linux? ( sys-apps/util-linux[static-libs(+)] ) ) virtual/pkgconfig
+DESCRIPTION=GPT partition table manipulator for Linux
+EAPI=5
+HOMEPAGE=http://www.rodsbooks.com/gdisk/
+IUSE=kernel_linux ncurses static
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux
+LICENSE=GPL-2
+RDEPEND=!static? ( dev-libs/popt ncurses? ( >=sys-libs/ncurses-5.7-r7 ) kernel_linux? ( sys-apps/util-linux ) )
+SLOT=0
+SRC_URI=mirror://sourceforge/gptfdisk/gptfdisk-1.0.0.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=6f47372e2676f1bf0b9f882d87b98a80
