@@ -1,28 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST gptfdisk-0.8.10.tar.gz 190666 SHA256 73e64151203ae0c347c488358e71ca582bb7fb7f0d66df86b71c42050390eb9b SHA512 3187bc231c3390a86f5b7b32270d5f0d1e6c7bccd9d1cbf100c29f4822afa73362aa1fbdd3b29f20c42d67ec51bd777b7b58b5791e31182b3860915bc695948f WHIRLPOOL f90b95f9f0cfba1b57b7dcfd2e39e475f322fa9ea2a85891ea70877e518bbed96dec8d4f61a8eeae3dbd2d36d276ce4bd2c2781eaa5135058cf544629f4cddbc
-DIST gptfdisk-0.8.8.tar.gz 188395 SHA256 4c31e9c0e4802079526658947ab236d3b417604a8246a418f41cdc2a8ec2be9a SHA512 22da28425ff06d2cca0838ff99950295c463d8557b0191efc74d4c9d819871ac635f69c62d07e93460ad07f4eb4c1ab4fd728b82374925f59783a52497a4becb WHIRLPOOL 12b03775a595f20fc445e10c36f4eb9bde3b6eabfbdd6dcb53ea9a80b52e3bfbc31571230e70213a20b9a1cd5f60ba718d093daf2daae53d000bfefd66a4d529
+DIST gptfdisk-1.0.0.tar.gz 193521 SHA256 5b66956743a799fc0471cdb032665c1391e82f9c5b3f1d7d726d29fe2ba01d6c SHA512 d60660563268c20737415e1cfd4239fba0cc2ceb4c6ae86cc34e9550d969f9b88ac3d8c862d1790f6d644266b423eeb5d78540eec01a447b722793fba54f6afc WHIRLPOOL d7fbec9fd92eb0a871510f2c25d0057577f73668b68336148af86d549522845dda79423e8ddf306d2128153436467f618decb9b65a19a6bf6e89ce5187c67676
 EBUILD gptfdisk-0.8.10.ebuild 1255 SHA256 58369f7690310eee347f8808b028c2e603cd6e4303cc96cb310d2d975f836943 SHA512 9b30f9722d342554bbfd2374bc43a7f1c2a6cce28a3dc1a84aec17c7cc28fd52b080b6f28696dd07e63e5e74654cdd439e7ddf3eda250409f47d3f08a726b200 WHIRLPOOL ea7e3ec2b55d82d0c2ab39f8018990833ed0dfada1f4f9f85ac19d0dd700f7728267943a11c8b081bea9afc571a67756b712718afb496819e9171d7c7c5ca501
-EBUILD gptfdisk-0.8.8.ebuild 1485 SHA256 4ebca7c95e79f7b7daa149bebf1b749980970bffef253f257f576b4a06472efb SHA512 a603c29675307362591b64aebbb9231b9d971c4a6c142259a461bf42a63cfb3905ccd63bd2d676f5df8ca4c6824882b822a11d79c7084319ba0ac99f5b16b75b WHIRLPOOL 88715db94437f73bc598f0c934b525f433a2eaa841689c6f920116c3a1736d748f1d27fcda570a8dbcd36fad53bce5f9674c4b88e2c66e628da81414e07a8183
-MISC ChangeLog 8936 SHA256 e908d96c7d08d22e3cc7af084a061f9ff6d13e8cbe6b141c479e449aa110fe54 SHA512 cd8339b603069a34420cd55145550eaa78490a408800a682d42da6b7312c530a4730d1ef0fafb2f6ca390be97bfc1eebe59c35439b5ced30de40f68762768d9d WHIRLPOOL f0ef5e2d84391303fa99eb3f6e27d1ffa5dd97e860cbac5a1a4d76be43ae74d0851ac62a7059d3fd2a9fa33f4d37964e899b16c4fe216c3f4329a4f0a75e0279
+EBUILD gptfdisk-1.0.0.ebuild 1269 SHA256 deb8c74efa6b9e0954897db9c525f2b3551fd1c23b387c8e55ede304b8793061 SHA512 17ecedc5066639166afa2797a46d90017244773e6bd6c546aff0fdf43d6c0a6a886fc2b6698a10d32ee8780e2e8924ab904426a19d6a3288225580b7d92981bf WHIRLPOOL e31c73c919bf8ca86a8279703c573a0c3683ac75dedf6d7dff0c1dde2a3fbf650dd2b2f7164ce86947adc266123a9455e90e5dfc9fb87942e616176d9182f6e0
+MISC ChangeLog 9109 SHA256 90417f19814175bb6548f4583b2a66820b0b0fa5f352dbb5b17d8a51f1df740b SHA512 f559d1f0983aac2a5d8919ecc145aed6a68cabc00c7435bca583f576aff00da8d8eef267a27e203dd1760d15050a9fbe3c23f48c9abd9c0ced02ab02d28d6fdb WHIRLPOOL d4e7e22a12943b6845fe8deee6c38397a38f8adcdc978d6deff22fd260549de042ec2d23c45f28b443c7ca61e19a7bc5970a644dae7eaade7852e44ed8e34141
 MISC metadata.xml 344 SHA256 399ef984258cc68b135eb28cb0a17ec32dfa333378ddce1631aaec2f359c4180 SHA512 bd6f482f28d348dcd250a0a0e76014d0bea9b7b54b5c5657c7a721370857541d10456e85bd8169852510d09dfede1e404d987bb6c0205ed7712dd55c46025095 WHIRLPOOL 76fec2ecd3c460ab5fb3de0b68213bfa8c0eab6ffe01e375c475e7e266cc0b8b63afbd7fad647e762206a3e522926d311b894bc1b119f112c705cc07b96a879a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVI+2UXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirLwoP/00Y9tQadUafLDJf6CJUrnkd
-NwAIUszwudV4wZEFSgjfrY+OT5m+6Xuv1/Nfi9vcFNWKwyL++Lw85ZdJKQNiJmlV
-Pb8Gng8naeZtWVF0IgMTmKGfkfZxt+zhkUBzRw9HOx+maGT3jlWnD9oW6/JO7jWI
-j+ENXkN5O2ZiPKpRvjKAnWhyPSVUN9sijD4XX5+u/7vNTRd3xico2oRrpNfCe34V
-repoftbbxzA0ATGYagCJa32JpJcY1eRJKMccS2CZay0dQc8SURjfj8Q8mw+DCsWR
-n6CCId/Ej5VpQQPHjP8zpDzQFxsIzHahnmF5E93+1TwQiCbBPfcEU1PmgOvEBsax
-YL78PbmxxSLQp9J6WY4ussI5blvtz9JCvq3ez12SSIGvKXzBzc7l0ZCAQNAPvLyC
-ddzi8MGVtKeru3LRja68clPFWAOIagiXVIUGFjK7b051oab684D8ANoOoOd5pZlW
-EFsGnw3A6IesWj9UezfkYiMS4wWUxhFfMjcHJSwY2draGXqp9dz8s61nX4J/ykfU
-de6Qx7Y89rk5l/e/v8TrpzUXw/GfNsAQd33ZS4ABBZ8bfdh0SpSWPD6gHx/sGgQD
-lilJ7RvWY4EmL9uvKqNSMEuc5/enTFvk8O5iIogj6NF+76MhUb/QQl1xgwiFESew
-z/HW2SvcE/QzJyxSD/v/
-=HhHI
+iQIcBAEBCAAGBQJVL4nXAAoJEPiazRVxLXTFZYQQANvGeFbd2ZHkYIk6s2+B5FTi
+s8dQNEjTs1BVYinDVN0l26W5kjGxYjksGfkcl1pJG/WzmO4cdZDcjV57n7OXnktv
+xbnJujIAvnBYPZ2eLl6+Pq5710+aj7pzDhgDrAejxK6CNu1J+rufpt/8RL5YcnTs
+Vnt3fmRkhFshQDzMl7i14+VZ8EmfZw+ZSxe1XotBXlO41uW4kmHINxeHwNKeVIGc
+zkb41IK9W4Mrldl6EQ7NtQz5fCBQOTTlO+fZ89Gjb+vvT5orwAo9oxPjriBq7fE0
+DUyWnLyiOfQzBseGoDDz3kFs2h4aMt/9ZwiUeJ4VjPIl6vrnw2+3wp/oCV8qdOmL
+CszWjyqv0u3NAI9dTp5d8vFblKXFStD/zWcqW8tpCSMuNgDovRw4v9EVKuPBT7Z/
+WLdpRyj6YC4crwaQTvK8W87Xso4tCFf1Ggk6qVvKZ1LBISRBlh4V71m5OegGGAxp
+hQNEvXRwsm+XYgLUNVeKFUCQHLOwQsE4Oe/DmWwUbt5oCSTnUrn6zxEDSqSSvrbg
+CtiwAsTsw9f6Iezj8RzmlQaKIcP1xRzW1ijMqRn+BvE1jqiplz9FvrCzqgxADLcE
+a6ZJMYJC5oJ3NlPkmvdDcZMHb3g5saGkgZs/2MR005vj0kZdiEWEUxzlILCKFqIa
+3trdtHCb15BxiJmPC0pJ
+=s09F
 -----END PGP SIGNATURE-----
